linter errors fixed

--- a/homeworks/igor.doroshenko_igordordev/6-adaptive/index.html
+++ b/homeworks/igor.doroshenko_igordordev/6-adaptive/index.html
@@ -181,18 +181,30 @@
                 <div class="main__clients-section clients-section content-wrapper">
                     <h2 class="clients-section__header">Our Clients</h2>
                     <ul class="clients-section__clients-list clients-list">
-                        <li class="clients-list__client client"><a class="client__link" href="#"><img
-                                    src="img/client-google.svg" alt="Google"></a></li>
-                        <li class="clients-list__client client"><a class="client__link" href="#"><img
-                                    src="img/client-microsoft.svg" alt="Microsoft"></a></li>
-                        <li class="clients-list__client client"><a class="client__link" href="#"><img
-                                    src="img/client-flickr.svg" alt="Flickr"></a></li>
-                        <li class="clients-list__client client"><a class="client__link" href="#"><img
-                                    src="img/client-slack.svg" alt="Slack"></a></li>
-                        <li class="clients-list__client client"><a class="client__link" href="#"><img
-                                    src="img/client-syngenta.svg" alt="Syngenta"></a></li>
-                        <li class="clients-list__client client"><a class="client__link" href="#"><img
-                                    src="img/client-merck.svg" alt="Merck"></a></li>
+                        <li class="clients-list__client client">
+                            <a class="client__link" href="#"><img
+                                    src="img/client-google.svg" alt="Google"></a>
+                                </li>
+                        <li class="clients-list__client client">
+                            <a class="client__link" href="#"><img
+                                    src="img/client-microsoft.svg" alt="Microsoft"></a>
+                                </li>
+                        <li class="clients-list__client client">
+                            <a class="client__link" href="#"><img
+                                    src="img/client-flickr.svg" alt="Flickr"></a>
+                                </li>
+                        <li class="clients-list__client client">
+                            <a class="client__link" href="#"><img
+                                    src="img/client-slack.svg" alt="Slack"></a>
+                                </li>
+                        <li class="clients-list__client client">
+                            <a class="client__link" href="#"><img
+                                    src="img/client-syngenta.svg" alt="Syngenta"></a>
+                                </li>
+                        <li class="clients-list__client client">
+                            <a class="client__link" href="#"><img
+                                    src="img/client-merck.svg" alt="Merck"></a>
+                                </li>
                     </ul>
                 </div>
             </section>
@@ -204,34 +216,55 @@
                         <img class="contacts__logo logo" alt="Sample Logo" src="img/bonik-delivery-logo.svg">
                         <p class="contacts__adress">10/B, House# 32, Dhaka Uddan Mohammadpur, Dhaka, Bangladesh</p>
                         <ul class="contacts__social social">
-                            <li class="social__element social-facebook"><a href="#"><img alt="fb" src="img/soc-fb.svg"></a>
+                            <li class="social__element social-facebook">
+                                <a href="#"><img alt="fb" src="img/soc-fb.svg"></a>
                             </li>
-                            <li class="social__element social-linkedin"><a href="#"><img alt="li" src="img/soc-lk.svg"></a>
+                            <li class="social__element social-linkedin">
+                                <a href="#"><img alt="li" src="img/soc-lk.svg"></a>
                             </li>
-                            <li class="social__element social-twitter"><a href="#"><img alt="tw" src="img/soc-tw.svg"></a>
+                            <li class="social__element social-twitter">
+                                <a href="#"><img alt="tw" src="img/soc-tw.svg"></a>
                             </li>
-                            <li class="social__element social-pinterest"><a href="#"><img alt="pn" src="img/soc-pn.svg"></a>
+                            <li class="social__element social-pinterest">
+                                <a href="#"><img alt="pn" src="img/soc-pn.svg"></a>
                             </li>
-                            <li class="social__element social-instagram"><a href="#"><img alt="in" src="img/soc-in.svg"></a>
+                            <li class="social__element social-instagram">
+                                <a href="#"><img alt="in" src="img/soc-in.svg"></a>
                             </li>
                         </ul>
                     </section>
                     <section class="footer-information__faq faq">
                         <h3 class="faq__header">Important links</h3>
                         <ul class="faq__list faq-list">
-                            <li class="faq-list__element"><a class="faq-list__link" href="#">FAQs</a></li>
-                            <li class="faq-list__element"><a class="faq-list__link" href="#">Blogs</a></li>
-                            <li class="faq-list__element"><a class="faq-list__link" href="#">Privacy Policy</a></li>
-                            <li class="faq-list__element"><a class="faq-list__link" href="#">Trims & Conditions</a></li>
+                            <li class="faq-list__element">
+                                <a class="faq-list__link" href="#">FAQs</a>
+                            </li>
+                            <li class="faq-list__element">
+                                <a class="faq-list__link" href="#">Blogs</a>
+                            </li>
+                            <li class="faq-list__element">
+                                <a class="faq-list__link" href="#">Privacy Policy</a>
+                            </li>
+                            <li class="faq-list__element">
+                                <a class="faq-list__link" href="#">Trims & Conditions</a>
+                            </li>
                         </ul>
                     </section>
                     <section class="footer-information__policy policy">
                         <h3 class="policy__header">Policy</h3>
                         <ul class="policy__list policy-list">
-                            <li class="policy-list__element"><a class="policy-list__link" href="#">Learner</a></li>
-                            <li class="policy-list__element"><a class="policy-list__link" href="#">Partners</a></li>
-                            <li class="policy-list__element"><a class="policy-list__link" href="#">Developers</a></li>
-                            <li class="policy-list__element"><a class="policy-list__link" href="#">Teaching Centre</a></li>
+                            <li class="policy-list__element">
+                                <a class="policy-list__link" href="#">Learner</a>
+                            </li>
+                            <li class="policy-list__element">
+                                <a class="policy-list__link" href="#">Partners</a>
+                            </li>
+                            <li class="policy-list__element">
+                                <a class="policy-list__link" href="#">Developers</a>
+                            </li>
+                            <li class="policy-list__element">
+                                <a class="policy-list__link" href="#">Teaching Centre</a>
+                            </li>
                         </ul>
                     </section>
                 </div>
