more lint errors fixed

--- a/homeworks/igor.doroshenko_igordordev/6-adaptive/index.html
+++ b/homeworks/igor.doroshenko_igordordev/6-adaptive/index.html
@@ -182,29 +182,23 @@
                     <h2 class="clients-section__header">Our Clients</h2>
                     <ul class="clients-section__clients-list clients-list">
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img
-                                    src="img/client-google.svg" alt="Google"></a>
-                                </li>
+                            <a class="client__link" href="#"><img src="img/client-google.svg" alt="Google"></a>
+                        </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img
-                                    src="img/client-microsoft.svg" alt="Microsoft"></a>
-                                </li>
+                            <a class="client__link" href="#"><img src="img/client-microsoft.svg" alt="Microsoft"></a>
+                        </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img
-                                    src="img/client-flickr.svg" alt="Flickr"></a>
-                                </li>
+                            <a class="client__link" href="#"><img src="img/client-flickr.svg" alt="Flickr"></a>
+                        </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img
-                                    src="img/client-slack.svg" alt="Slack"></a>
-                                </li>
+                            <a class="client__link" href="#"><img src="img/client-slack.svg" alt="Slack"></a>
+                        </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img
-                                    src="img/client-syngenta.svg" alt="Syngenta"></a>
-                                </li>
+                            <a class="client__link" href="#"><img src="img/client-syngenta.svg" alt="Syngenta"></a>
+                        </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img
-                                    src="img/client-merck.svg" alt="Merck"></a>
-                                </li>
+                            <a class="client__link" href="#"><img src="img/client-merck.svg" alt="Merck"></a>
+                        </li>
                     </ul>
                 </div>
             </section>
