lint errors fixed

--- a/homeworks/igor.doroshenko_igordordev/6-adaptive/index.html
+++ b/homeworks/igor.doroshenko_igordordev/6-adaptive/index.html
@@ -10,10 +10,12 @@
     <body>
         <header class="header-block">
             <div class="header content-wrapper">
-                <h1 class="header__logo logo"><img src="img/bonik-delivery-logo.svg" alt="Delivery Logo"></h1>
+                <h1 class="header__logo logo">
+                    <img src="img/bonik-delivery-logo.svg" alt="Delivery Logo">
+                </h1>
                 <div class="header__information information">
                     <p class="informarion__phone">+088 01877576457</p>
-                    <button class="informaion__login">Sign In</button>
+                    <button class="informaion__login" type="button">Sign In</button>
                     <div class="information__language-block">
                         <select class="information__language language">
                             <option class="information__language__option language__en" selected>EN</option>
@@ -27,16 +29,16 @@
             <section class="main__track-section-block">
                 <div class="main__track-section track-section content-wrapper">
                     <div class="track-section__info">
-                        <h2 class="track-section__info__header">Delivery is Process<br> Going From Source Point to
-                            Predefined
-                            Destination.
+                        <h2 class="track-section__info__header">
+                            Delivery is Process<br> Going From Source Point to
+                            Predefined Destination.
                         </h2>
                         <p class="track-section__info__content">Need to send something on time? Delivery is process of
                             transporting
                             goods from a source location to a predefined destination.</p>
                         <form class="track-section__info__tracking-form tracking-form">
                             <input type="text" class="tracking-form__input" placeholder="Type your tracking number">
-                            <button class="tracking-form__apply-button">Track Percel</button>
+                            <button class="tracking-form__apply-button" type="button">Track Percel</button>
                         </form>
                     </div>
                     <img class="track-section__delivery-img" src="img/delivery-driver.png"
@@ -116,7 +118,7 @@
                         <p class="apply-section__content">Need to send something on time? Delivery is process of
                             transporting
                             goods from a source location to a predefined destination.</p>
-                        <button class="apply-section__apply-button">Apply Now</button>
+                        <button class="apply-section__apply-button" type="button">Apply Now</button>
                     </div>
                 </div>
             </section>
@@ -182,22 +184,34 @@
                     <h2 class="clients-section__header">Our Clients</h2>
                     <ul class="clients-section__clients-list clients-list">
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img src="img/client-google.svg" alt="Google"></a>
+                            <a class="client__link" href="#">
+                                <img src="img/client-google.svg" alt="Google">
+                            </a>
                         </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img src="img/client-microsoft.svg" alt="Microsoft"></a>
+                            <a class="client__link" href="#">
+                                <img src="img/client-microsoft.svg" alt="Microsoft">
+                            </a>
                         </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img src="img/client-flickr.svg" alt="Flickr"></a>
+                            <a class="client__link" href="#">
+                                <img src="img/client-flickr.svg" alt="Flickr">
+                            </a>
                         </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img src="img/client-slack.svg" alt="Slack"></a>
+                            <a class="client__link" href="#">
+                                <img src="img/client-slack.svg" alt="Slack">
+                            </a>
                         </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img src="img/client-syngenta.svg" alt="Syngenta"></a>
+                            <a class="client__link" href="#">
+                                <img src="img/client-syngenta.svg" alt="Syngenta">
+                            </a>
                         </li>
                         <li class="clients-list__client client">
-                            <a class="client__link" href="#"><img src="img/client-merck.svg" alt="Merck"></a>
+                            <a class="client__link" href="#">
+                                <img src="img/client-merck.svg" alt="Merck">
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -211,19 +225,29 @@
                         <p class="contacts__adress">10/B, House# 32, Dhaka Uddan Mohammadpur, Dhaka, Bangladesh</p>
                         <ul class="contacts__social social">
                             <li class="social__element social-facebook">
-                                <a href="#"><img alt="fb" src="img/soc-fb.svg"></a>
+                                <a href="#">
+                                    <img alt="fb" src="img/soc-fb.svg">
+                                </a>
                             </li>
                             <li class="social__element social-linkedin">
-                                <a href="#"><img alt="li" src="img/soc-lk.svg"></a>
+                                <a href="#">
+                                    <img alt="li" src="img/soc-lk.svg">
+                                </a>
                             </li>
                             <li class="social__element social-twitter">
-                                <a href="#"><img alt="tw" src="img/soc-tw.svg"></a>
+                                <a href="#">
+                                    <img alt="tw" src="img/soc-tw.svg">
+                                </a>
                             </li>
                             <li class="social__element social-pinterest">
-                                <a href="#"><img alt="pn" src="img/soc-pn.svg"></a>
+                                <a href="#">
+                                    <img alt="pn" src="img/soc-pn.svg">
+                                </a>
                             </li>
                             <li class="social__element social-instagram">
-                                <a href="#"><img alt="in" src="img/soc-in.svg"></a>
+                                <a href="#">
+                                    <img alt="in" src="img/soc-in.svg">
+                                </a>
                             </li>
                         </ul>
                     </section>
