--- a/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/6-adaptive/index.html
@@ -16,14 +16,14 @@
                 <div class="header__actions">
                     <div class="action__phone">
                         <img src="img/header/phone.svg" alt="phone" class="phone__img">
-                        <p class="phone__number">+088 01877576457</p>
+                        <a type="tel" href="#" class="phone__number">+088 01877576457</a>
                     </div>
                     <button type="button" class="action__sign-in">
                         Sign In
                     </button>
                     <div class="action__language">
                         <img src="img/header/lang.svg" alt="globus" class="language__globus">
-                        <p class="language__text">EN</p>
+                        <a href="#" class="language__text">EN</a>
                     </div>
                 </div>
             </div>
@@ -45,9 +45,9 @@
                         <button type="button" class="search__button">Track Percel</button>
                     </div>
                 </div>
-                <picture class="bike-deliver">
-                    <source srcset="img/biker/biker2x.png" type="image/png" media="(min-resolution: 1.5)">
-                    <img src="img/biker/biker1x.png" alt="biker">
+                <picture>
+                    <source class="bike-deliver" srcset="img/biker/biker2x.png" type="image/png" media="(min-resolution: 1.5)">
+                    <img class="bike-deliver" src="img/biker/biker1x.png" alt="biker">
                 </picture>
             </div>
         </section>
@@ -242,12 +242,12 @@
             <div class="container clients__container">
                 <p class="clients__title">Our Clients</p>
                 <div class="clients__list">
-                    <img src="img/clients/google.svg" alt="google">
-                    <img src="img/clients/microsoft.svg" alt="microsoft">
-                    <img src="img/clients/flickr.svg" alt="flickr">
-                    <img src="img/clients/slack.svg" alt="slack">
-                    <img src="img/clients/syngenta.svg" alt="syngenta">
-                    <img src="img/clients/merck.svg" alt="merck">
+                    <img class="clients__item" src="img/clients/google.svg" alt="google">
+                    <img class="clients__item" src="img/clients/microsoft.svg" alt="microsoft">
+                    <img class="clients__item" src="img/clients/flickr.svg" alt="flickr">
+                    <img class="clients__item" src="img/clients/slack.svg" alt="slack">
+                    <img class="clients__item" src="img/clients/syngenta.svg" alt="syngenta">
+                    <img class="clients__item" src="img/clients/merck.svg" alt="merck">
                 </div>
             </div>
         </section>
