fixed markup bugs

--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/index.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/6-adaptive/src/index.html
@@ -9,7 +9,7 @@
         <div class="page-wrapper">
             <header class="main-header">
                 <a class="logo__link" href="#">
-                    <svg class="logo__image">
+                    <svg width="270" height="39">
                         <use xlink:href="../svg/sprites.svg#logo"></use>
                     </svg>
                 </a>
@@ -220,24 +220,36 @@
                 <section class="section-clients">
                     <h2 class="client__headline">Our Clients</h2>
                     <section class="content-row content-row__clients-logo">
-                        <svg width="120" height="40">
-                            <use xlink:href="../svg/sprites.svg#google-icon"></use>
-                        </svg>
-                        <svg width="141" height="30">
-                            <use xlink:href="../svg/sprites.svg#microsoft-icon"></use>
-                        </svg>
-                        <svg width="100" height="30">
-                            <use xlink:href="../svg/sprites.svg#flickr-icon"></use>
-                        </svg>
-                        <svg width="119" height="30">
-                            <use xlink:href="../svg/sprites.svg#slack-icon"></use>
-                        </svg>
-                        <svg width="134" height="40">
-                            <use xlink:href="../svg/sprites.svg#syngenta-icon"></use>
-                        </svg>
-                        <svg width="138" height="40">
-                            <use xlink:href="../svg/sprites.svg#merck-icon"></use>
-                        </svg>
+                        <a class="client-logo__link" href="#">
+                            <svg width="120" height="40">
+                                <use xlink:href="../svg/sprites.svg#google-icon"></use>
+                            </svg>
+                        </a>
+                        <a class="client-logo__link" href="#">
+                            <svg width="141" height="30">
+                                <use xlink:href="../svg/sprites.svg#microsoft-icon"></use>
+                            </svg>
+                        </a>
+                        <a class="client-logo__link" href="#">
+                            <svg width="100" height="30">
+                                <use xlink:href="../svg/sprites.svg#flickr-icon"></use>
+                            </svg>
+                        </a>
+                        <a class="client-logo__link" href="#">
+                            <svg width="119" height="30">
+                                <use xlink:href="../svg/sprites.svg#slack-icon"></use>
+                            </svg>
+                        </a>
+                        <a class="client-logo__link" href="#">
+                            <svg width="134" height="40">
+                                <use xlink:href="../svg/sprites.svg#syngenta-icon"></use>
+                            </svg>
+                        </a>
+                        <a class="client-logo__link" href="#">
+                            <svg width="138" height="40">
+                                <use xlink:href="../svg/sprites.svg#merck-icon"></use>
+                            </svg>
+                        </a>
                     </section>
                 </section>
             </main>
