--- a/homeworks/konstantin.rusenko_ConstantinRusenko/6-adaptive/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/6-adaptive/index.html
@@ -10,17 +10,17 @@
     <body>
         <header class="header">
             <a class="header__logo" href="index.html">
-                <img class="header__logo" src="img/bonik-delivery-logo.svg">
+                <img class="header__logo-img" src="img/bonik-delivery-logo.svg">
             </a>
             <nav class="header__navigation">
                 <div class="navigation__info">
                     <img src="img/phone.svg">
-                    <span class="navigation__number">+088 01877576457</span>
+                    <p class="navigation__number">+088 01877576457</p>
                 </div>
                 <button class="header__button" type="button">Sign In</button>
                 <div class="navigation__language">
-                    <img src="img/planet.svg">
-                    <span>EN</span>
+                    <img class="navigation__planet" src="img/planet.svg">
+                    <p>EN</p>
                 </div>
             </nav>
         </header>
@@ -138,10 +138,10 @@
                                 srcset="img/article-1-retina.png 2x"
                             >
                             <div class="news__info">
-                                <span>UI / UX Design</span>
-                                <div>
+                                <p>UI / UX Design</p>
+                                <div class="info__views">
                                     <img src="img/views.svg">
-                                    <span>12450</span>
+                                    <p>12450</p>
                                 </div>
                             </div>
                         </div>
@@ -159,10 +159,10 @@
                                 srcset="img/article-2-retina.png 2x"
                             >
                             <div class="news__info">
-                                <span>Apps Design</span>
-                                <div>
+                                <p>Apps Design</p>
+                                <div class="info__views">
                                     <img src="img/views.svg">
-                                    <span>2953</span>
+                                    <p>2953</p>
                                 </div>
                             </div>
                         </div>
@@ -180,10 +180,10 @@
                                 srcset="img/article-3-retina.png 2x"
                             >
                             <div class="news__info">
-                                <span>Product Experience</span>
-                                <div>
+                                <p>Product Experience</p>
+                                <div class="info__views">
                                     <img src="img/views.svg">
-                                    <span>7980</span>
+                                    <p>7980</p>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                     <a href="#">
                         <img src="img/bonik-delivery-logo.svg">
                     </a>
-                    <span class="info__text">10/B, House# 32, Dhaka Uddan Mohammadpur, Dhaka, Bangladesh</span>
+                    <p class="info__text">10/B, House# 32, Dhaka Uddan Mohammadpur, Dhaka, Bangladesh</p>
                     <ul class="media-links list">
                         <li>
                             <a class="link" href="#">
@@ -302,7 +302,7 @@
                 </div>
             </div>
             <div class="footer__copyright">
-                <span>Copyright @2021 Bonik Delivery</span>
+                <p>Copyright @2021 Bonik Delivery</p>
             </div>
         </footer>       
     </body>
