changed fonts and margins

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-adaptive/index_adaptive.html
@@ -6,19 +6,24 @@
         <title>Adaptive</title>
         <link rel="stylesheet" href="style_adaptive.css">
     </head>
+    <header class="header">
+
+    </header>
     <body>
-        <header>
-            <img src="images/1x/Group7.png" alt="">
-        </header>
         <main class="page">
             <section class="page__track">
                 <div class="page__track_textfield">
                     <div class="page__track_textfield-text-big">
-                        <b>Delivery is Process Going From Source Point to Predefined Destination</b>
+                        <b>Delivery is Process</b>
+                    </div>
+                    <div class="page__track_textfield-text-big"><b>Going From Source Point to</b>
+                    </div>
+                    <div class="page__track_textfield-text-big"><b>Predefined Destination</b>
                     </div>
                     <br>
                     <br>
-                    <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
+                    <div class="page__track_textfield-text-small">Need to send something on time? Delivery is process of transporting goods</div>
+                    <div class="page__track_textfield-text-small">from a source location to predefined destination</div>
                     <br>
                     <br>
                     <div class="page__track_inputfield">
@@ -31,7 +36,7 @@
                     <img src="images/1x/bonik_left_1x.png" alt="bonik">
                 </picture>
             </section>
-            <h2 class="page__title">Why Choose Us?</h2>
+            <div class="page__title"><b>Why Choose Us?</b></div>
             <div class="page__text">Need to send something on time? Delivery is process of transporting goods from a source location to predefined destination</div>
             <section class="page__offers">
                 <div class="page__offers-block page__offers-block-color-a">
